Revert "HIVE-26473: Hive JDK-17 support for compile and runtime (#5404)"
This reverts commit 413069ea0faeb893fe78faa215b08a70ece80595.