@@ -169,27 +169,30 @@ public class CompressionUtils {
             // no sub-directories
             continue;
           }
-          LOG.debug("Attempting to write output directory {}.", outputFile.getAbsolutePath());
-          if (!outputFile.exists()) {
-            LOG.debug("Attempting to create output directory {}.", outputFile.getAbsolutePath());
-            if (!outputFile.mkdirs()) {
-              throw new IllegalStateException("Couldn't create directory %s.".formatted(
+          LOG.debug(String.format("Attempting to write output directory %s.",
                   outputFile.getAbsolutePath()));
+          if (!outputFile.exists()) {
+            LOG.debug(String.format("Attempting to create output directory %s.",
+                    outputFile.getAbsolutePath()));
+            if (!outputFile.mkdirs()) {
+              throw new IllegalStateException(String.format("Couldn't create directory %s.",
+                      outputFile.getAbsolutePath()));
             }
           }
         } else {
           final OutputStream outputFileStream;
           if (flatten) {
             File flatOutputFile = new File(outputDir, outputFile.getName());
-            LOG.debug("Creating flat output file {}.", flatOutputFile.getAbsolutePath());
+            LOG.debug(String.format("Creating flat output file %s.", flatOutputFile.getAbsolutePath()));
             outputFileStream = new FileOutputStream(flatOutputFile);
           } else if (!outputFile.getParentFile().exists()) {
-            LOG.debug("Attempting to create output directory {}.", outputFile.getParentFile().getAbsoluteFile());
+            LOG.debug(String.format("Attempting to create output directory %s.",
+                    outputFile.getParentFile().getAbsoluteFile()));
             if (!outputFile.getParentFile().getAbsoluteFile().mkdirs()) {
-              throw new IllegalStateException("Couldn't create directory %s.".formatted(
-                  outputFile.getParentFile().getAbsolutePath()));
+              throw new IllegalStateException(String.format("Couldn't create directory %s.",
+                      outputFile.getParentFile().getAbsolutePath()));
             }
-            LOG.debug("Creating output file {}.", outputFile.getAbsolutePath());
+            LOG.debug(String.format("Creating output file %s.", outputFile.getAbsolutePath()));
             outputFileStream = new FileOutputStream(outputFile);
           } else {
             outputFileStream = new FileOutputStream(outputFile);
